# Slic3r

./: .gitignore  CMakeLists.txt
cmake/modules/: Binpack2D.cmake  DownloadProject.cmake  Libnest2D.cmake
lib/Slic3r/: Model.pm  Test.pm
lib/Slic3r/GUI/: MainFrame.pm  Plater.pm
lib/Slic3r/GUI/Plater/: ObjectSettingsDialog.pm
t/: multi.t
xs/: CMakeLists.txt
xs/src/admesh/: stl.h  util.cpp
xs/src/libslic3r/: Model.cpp  Model.hpp  ModelArrange.hpp  PrintObject.cpp  SLABasePool.cpp  SVG.cpp  SVG.hpp  TriangleMesh.cpp  TriangleMesh.hpp  Utils.hpp  utils.cpp
xs/src/libslic3r/Binpack2DBridge/: CMakeLists.txt  ModelExtensions.cpp  ModelExtensions.hpp  binpack2dbridge.cpp  binpack2dbridge.hpp
xs/src/libslic3r/Format/: 3mf.cpp  AMF.cpp  PRUS.cpp
xs/src/slic3r/GUI/: 3DScene.cpp  3DScene.hpp  GLCanvas3D.cpp  GLCanvas3D.hpp  GLCanvas3DManager.cpp  GLCanvas3DManager.hpp  GLGizmo.cpp  GLGizmo.hpp  GUI.cpp  GUI.hpp  GUI_ObjectParts.cpp  GUI_ObjectParts.hpp
xs/xsp/: GUI.xsp  GUI_3DScene.xsp  Model.xsp
